# classifier-orchestrator/internal/usecase/list_classes/repository/dto/list_classes.go
@@ -1,9 +1,21 @@
 package dto
 
+import "time"
+
 type Class struct {
-	ID          int32
-	Name        string
-	Description string
+	ID              int32
+	Name            string
+	Description     string
+	Status          string
+	CreatedAt       time.Time
+	UpdatedAt       time.Time
+	PositiveGoldens []Golden
+	NegativeGoldens []Golden
+}
+
+type Golden struct {
+	ID   int32  `json:"id"`
+	Text string `json:"text"`
 }
 
 type ListClassesOutput []Class
