# classifier-orchestrator/internal/usecase/update_class_status/dto/update_class_status.go
@@ -1,0 +1,16 @@
+package dto
+
+import "time"
+
+type UpdateClassStatusRequest struct {
+	ID     int32  `json:"-"`
+	Status string `json:"status"`
+}
+
+type UpdateClassStatusResponse struct {
+	ID          int32     `json:"id"`
+	Name        string    `json:"name"`
+	Description string    `json:"description"`
+	Status      string    `json:"status"`
+	UpdatedAt   time.Time `json:"updatedAt"`
+}
