# classifier-orchestrator/internal/usecase/update_class_status/repository/dto/update_class_status.go
@@ -1,0 +1,16 @@
+package dto
+
+import "time"
+
+type UpdateClassStatusInput struct {
+	ID     int32
+	Status string
+}
+
+type UpdateClassStatusOutput struct {
+	ID          int32
+	Name        string
+	Description string
+	Status      string
+	UpdatedAt   time.Time
+}
